# allegro-selenium

./: .gitignore  pyproject.toml
tests/: test_cart.py
